--- a/data/rush/yugipedia1050353.yaml
+++ b/data/rush/yugipedia1050353.yaml
@@ -1,13 +1,13 @@
 konami_id:
 name:
-  en: Cybersepice Cumin
+  en: Cybersepice Cinnamon
   de:
   es:
   fr:
   it:
   pt:
-  ja: サイバースパイス・クミン
-  ja_romaji: Saibāsupaisu Kumin
+  ja: サイバースパイス・シナモン
+  ja_romaji: Saibāsupaisu Shinamon
   ko:
   ko_rr:
   zh-TW:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent excavates the top card of their Deck. If that card is a monster, inflict damage to your opponent equal to [its Level] x 100. Your opponent places the excavated card on the top of their Deck.
+    Your opponent excavates the top card of their Deck. Then, if that card is a Level 5 or higher monster, you can Special Summon 1 monster from your hand face-up to your field. Your opponent places the excavated card on the top of their Deck.
   de:
   es:
   fr:
@@ -39,17 +39,17 @@ effect:
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
-level: 3
-atk: 900
-def: 300
+level: 2
+atk: 400
+def: 700
 series:
 - Cybersepice
 images:
 - index: 1
-  image: CybersepiceCumin-RDKP17-JP-OP.png
+  image: CybersepiceCinnamon-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP016
+  - set_number: RD/KP17-JP014
     set_name: Burst Rex of Awakening
     rarities:
     - Common
@@ -58,4 +58,4 @@ is_translation_unofficial:
     en: true
   text:
     en: true
-yugipedia_page_id: 1046111
+yugipedia_page_id: 1050353
