--- a/data/rush/yugipedia1050669.yaml
+++ b/data/rush/yugipedia1050669.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    During a turn you have not Special Summoned a monster from the Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Your opponent excavates the top 2 cards of their Deck. You can Special Summon 1 monster with a Level equal to or lower than [the total Levels of the excavated monsters] from your Graveyard face-up to your field. Your opponent places the excavated cards on the top of their Deck in any order.
   de:
   es:
   fr:
@@ -44,12 +44,13 @@ atk: 2200
 def: 0
 images:
 - index: 1
-  image: WheatclothDemeter-OW.png
+  image: WheatclothDemeter-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP0??
+  - set_number: RD/KP17-JP017
     set_name: Burst Rex of Awakening
     rarities:
+    - Rare
 is_translation_unofficial:
   name:
     en: true
