--- a/rush.yaml
+++ b/rush.yaml
@@ -139401,6 +139401,278 @@ yugipedia_page_id: 1046291
 ---
 konami_id:
 name:
+  en: Cybersepice Hotpot
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・ホットポット
+  ja_romaji: Saibāsupaisu Hottopotto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 7 or higher FIRE Attribute Cyberse Type monster or 1 "Spice Cross Mix" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 1
+atk: 100
+def: 100
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceHotpot-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP013
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044904
+---
+konami_id:
+name:
+  en: Cybersepice Turmeric
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・ターメリック
+  ja_romaji: Saibāsupaisu Tāmerikku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more cards in your Deck and have a face-up FIRE Attribute Cyberse Type monster other than this card on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Look at 1 face-down card in your opponent's Spell & Trap Zone. Then, if that card is a Trap Card, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 2
+atk: 600
+def: 900
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceTurmeric-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP015
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044905
+---
+konami_id:
+name:
+  en: Cybersepice Nutmeg
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・ナツメグ
+  ja_romaji: Saibāsupaisu Natsumegu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 1 Cyberse Type monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Each player sends the top card of their Deck to the Graveyard. Then, you can place 1 of the cards sent on either the top or bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 7
+atk: 2300
+def: 0
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceNutmeg-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP018
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044906
+---
+konami_id:
+name:
+  en: Cybersepice Queen Cinnamon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・クイーンシナモン
+  ja_romaji: Saibāsupaisu Kuīn Shinamon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 3 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Each player excavates the top 2 cards of their Deck. Then, inflict damage to your opponent equal to [the total Levels of the excavated monsters] x 100. Each player places their excavated cards on the top of their Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 2800
+def: 2500
+materials:
+  en: |-
+    "Cybersepice Cinnamon" + "Cybersepice Hotpot"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceQueenCinnamon-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP046
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044907
+---
+konami_id:
+name:
   en: Straynge Cat Witch
   de:
   es:
@@ -139738,7 +140010,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    None
   de:
   es:
   fr:
@@ -139750,7 +140022,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Your opponent excavates the top card of their Deck. If that card is a monster, inflict damage to your opponent equal to [its Level] x 100. Your opponent places the excavated card on the top of their Deck.
   de:
   es:
   fr:
@@ -139770,18 +140042,139 @@ series:
 - Cybersepice
 images:
 - index: 1
-  image: CybersepiceCumin-OW.png
+  image: CybersepiceCumin-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP0??
+  - set_number: RD/KP17-JP016
     set_name: Burst Rex of Awakening
     rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1046111
+---
+konami_id:
+name:
+  en: Spice Cross Mix
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スパイスクロース・ミックス
+  ja_romaji: Supaisu Kurōsu Mikkusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon by sending FIRE Attribute Cyberse Type monsters from your hand and/or field to the Graveyard as material. Then, you can place 1 card from your opponent's Graveyard on top of their Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Cybersepice
+images:
+- index: 1
+  image: SpiceCrossMix-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP055
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1048511
+---
+konami_id:
+name:
+  en: Cybersepice Cinnamon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・シナモン
+  ja_romaji: Saibāsupaisu Shinamon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Your opponent excavates the top card of their Deck. Then, if that card is a Level 5 or higher monster, you can Special Summon 1 monster from your hand face-up to your field. Your opponent places the excavated card on the top of their Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 2
+atk: 400
+def: 700
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceCinnamon-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP014
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1050353
 ---
 konami_id:
 name:
@@ -139799,7 +140192,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    During a turn you have not Special Summoned a monster from the Graveyard.
   de:
   es:
   fr:
@@ -139811,7 +140204,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Your opponent excavates the top 2 cards of their Deck. You can Special Summon 1 monster with a Level equal to or lower than [the total Levels of the excavated monsters] from your Graveyard face-up to your field. Your opponent places the excavated cards on the top of their Deck in any order.
   de:
   es:
   fr:
@@ -139829,12 +140222,13 @@ atk: 2200
 def: 0
 images:
 - index: 1
-  image: WheatclothDemeter-OW.png
+  image: WheatclothDemeter-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP0??
+  - set_number: RD/KP17-JP017
     set_name: Burst Rex of Awakening
     rarities:
+    - Rare
 is_translation_unofficial:
   name:
     en: true
@@ -140444,3 +140838,197 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1052854
+---
+konami_id:
+name:
+  en: Cybersepice Garam Masala
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・ガラムマサラ
+  ja_romaji: Saibāsupaisu Garamu Masara
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Your opponent has a face-up monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Your opponent excavates the top 3 cards of their Deck. 1 face-up monster on your opponent's field loses ATK equal to [the total Levels of the excavated monsters] x 300 until the end of this turn. Your opponent places the excavated cards on the top of their Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 7
+atk: 2400
+def: 0
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceGaramMasala-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP019
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1053225
+---
+konami_id:
+name:
+  en: Cybersepice Curry Bread Pandora Drapery
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・カリーパンドラペリー
+  ja_romaji: Saibāsupaisu Karīpandoraperī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Your opponent excavates the top 4 cards of their Deck. If a Spell/Trap Card(s) is among the excavated cards, you can destroy all Spell/Trap Cards on your opponent's field. Your opponent places the excavated cards on the top of their Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 3300
+def: 2500
+materials:
+  en: |-
+    "Cybersepice Garam Masala" + "Wheatcloth Demeter"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceCurryBreadPandoraDrapery-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP047
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1053231
+---
+konami_id:
+name:
+  en: Spice Cross Black Pepper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スパイスクロース・ブラックペッパー
+  ja_romaji: Supaisu Kurōsu Burakku Peppā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a card(s) is sent from your opponent's Deck to the Graveyard while you have 3 or more FIRE Attribute Cyberse Type monsters with different names in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 5 cards in your opponent's Graveyard, including 2 Level 4 or lower monsters. Your opponent places those cards on top of their Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Cybersepice
+images:
+- index: 1
+  image: SpiceCrossBlackPepper-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP061
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1053237
