--- a/data/rush/20116.yaml
+++ b/data/rush/20116.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: マグネット・サンダーチャージ
-  ja_romaji: Magunetto Sandā Chāji
+  ja_romaji: Magunetto Sandāchāji
   ko:
   ko_rr:
   zh-TW:
