--- a/data/rush/yugipedia1044906.yaml
+++ b/data/rush/yugipedia1044906.yaml
@@ -65,6 +65,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
