--- a/data/rush/yugipedia1053225.yaml
+++ b/data/rush/yugipedia1053225.yaml
@@ -53,6 +53,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
