--- a/rush.yaml
+++ b/rush.yaml
@@ -136953,7 +136953,7 @@ name:
   it:
   pt:
   ja: マグネット・サンダーチャージ
-  ja_romaji: Magunetto Sandā Chāji
+  ja_romaji: Magunetto Sandāchāji
   ko:
   ko_rr:
   zh-TW:
@@ -139590,6 +139590,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -140065,7 +140066,7 @@ name:
   it:
   pt:
   ja: スパイスクロース・ミックス
-  ja_romaji: Supaisu Kurōsu Mikkusu
+  ja_romaji: Supaisukurōsu Mikkusu
   ko:
   ko_rr:
   zh-TW:
@@ -140084,7 +140085,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending FIRE Attribute Cyberse Type monsters from your hand and/or field to the Graveyard as material. Then, you can place 1 card from your opponent's Graveyard on top of their Deck.
+    Fusion Summon by sending FIRE Attribute Cyberse Type monsters from your hand and/or field to the Graveyard as material. Then, you can place 1 card from your opponent's Graveyard on either the top or bottom of their Deck.
   de:
   es:
   fr:
@@ -140894,6 +140895,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -140984,7 +140986,7 @@ name:
   it:
   pt:
   ja: スパイスクロース・ブラックペッパー
-  ja_romaji: Supaisu Kurōsu Burakku Peppā
+  ja_romaji: Supaisukurōsu Burakku Peppā
   ko:
   ko_rr:
   zh-TW:
