--- a/data/cards/yugipedia1050253.yaml
+++ b/data/cards/yugipedia1050253.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a Level 4 LIGHT monster(s) is Special Summoned to your field: You can Special Summon this card from your hand or GY, but banish it when it leaves the field. You can target 1 other Level 4 LIGHT monster you control; its Level and this card's become 8 until the end of this turn. You can only use each effect of "Galaxy War Drake" once per turn, and cannot Special Summon the turn you activate either of them, except LIGHT monsters.
+    If a Level 4 LIGHT monster(s) is Special Summoned to your field: You can Special Summon this card from your hand or GY, but banish it when it leaves the field. You can target 1 other Level 4 LIGHT monster you control; the Levels of both that monster and this card become 8 until the end of this turn. You can only use each effect of "Galaxy War Drake" once per turn, and cannot Special Summon the turn you activate either effect, except LIGHT monsters.
   de:
   es:
   fr:
