--- a/data/cards/01855932.yaml
+++ b/data/cards/01855932.yaml
@@ -12,7 +12,7 @@ name:
   ko: 무사신제－카구츠치
   ko_rr:
   zh-TW: 武鬥神帝－迦具土
-  zh-CN: 武神帝-迦具土
+  zh-CN: 武尊神帝－迦具土
 text:
   en: |-
     2 Level 4 Beast-Warrior-Type monsters
@@ -42,7 +42,10 @@ text:
     獸戰士族等級４怪獸×２
     「武鬥神帝－迦具土」在我方場上僅限以正面表示存在１隻。此卡超量召喚成功時，從我方牌組上方將５張卡送至墓地。此卡的攻擊力依據透過此效果送至墓地的冠有「武鬥神」之名的卡的數量×１００進行提升。此外，在我方場上冠有「武鬥神」之名的獸戰士族怪獸因戰鬥或卡的效果被破壞的狀況下，可去除此卡的１個超量素材替代１隻被破壞的該怪獸。
   zh-CN: |-
-    兽战士族4星怪兽×2。这张卡XYZ召唤成功时，从自己卡组上面把5张卡送去墓地。这张卡的攻击力上升这个效果送去墓地的名字带有「武神」的卡数量×100的数值。此外，自己场上的名字带有「武神」的兽战士族怪兽被战斗或者卡的效果破坏的场合，可以作为那1只破坏的怪兽的代替而把这张卡1个XYZ素材取除。「武神帝-迦具土」在自己场上只能有1只表侧表示存在。
+    兽战士族等级４怪兽×２
+    ①：“武尊神帝－迦具土”在自己场上仅可有１只以表侧表示存在。
+    ②：此卡超量召唤的情况下发动。从自己的牌组上面将５张卡送至墓地。此卡的攻击力上升相当于以此效果送至墓地的“武尊神”卡的数量×１００的数值。
+    ③：自己场上的兽战士族“武尊神”怪兽将被战斗或效果破坏的情况下，作为该将被破坏的怪兽的１只的代替，可去除此卡的１个超量素材。
 card_type: Monster
 monster_type_line: Beast-Warrior / Xyz / Effect
 attribute: LIGHT
