--- a/data/cards/87347365.yaml
+++ b/data/cards/87347365.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리바이벌 골렘
   ko_rr:
   zh-TW: 再生石魔
-  zh-CN: 再生石人
+  zh-CN: 再生魔像
 text:
   en: |-
     If this card is sent from the Deck to the GY: Activate 1 of these effects;
@@ -50,7 +50,10 @@ text:
     ●从墓地特殊召唤此卡。
     ●将此卡从墓地加入手牌
   zh-CN: |-
-    这张卡从卡组送去墓地时，从以下效果选择1个发动。「再生石人」的效果1回合只能使用1次。●这张卡从墓地特殊召唤。●这张卡从墓地加入手卡。
+    此卡名的效果１回合仅可使用１次。
+    ①：此卡被从牌组送至墓地的情况下，从以下效果中选择１个发动。
+    ●将此卡特殊召唤。
+    ●将此卡加入手牌。
 card_type: Monster
 monster_type_line: Rock / Effect
 attribute: EARTH
