--- a/data/cards/00786906.yaml
+++ b/data/cards/00786906.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：可將我方或對方墓地的１隻無法通常召喚的怪獸做為對象發動。特殊召喚該怪獸至我方場上。
   zh-CN: |-
-    ①：以自己或者对方的墓地1只不能通常召唤的怪兽为对象才能发动。那只怪兽在自己场上特殊召唤。
+    ①：以自己或对手墓地的１只不可通常召唤的怪兽为对象可以发动。将该怪兽特殊召唤至自己场上。
 card_type: Trap
 property: Normal
 images:
