--- a/data/cards/06351548.yaml
+++ b/data/cards/06351548.yaml
@@ -12,7 +12,7 @@ name:
   ko: 서광의 기사
   ko_rr:
   zh-TW: 曙光的騎士
-  zh-CN: 曙光之骑士
+  zh-CN: 曙光骑士
 text:
   en: |-
     If this card is sent from the field to the Graveyard: You can send 1 LIGHT monster from your Deck to the Graveyard. If this card is sent from your Deck to the Graveyard: Target 1 LIGHT monster in your Graveyard; place that target on the top of your Deck. You can only use 1 "Dawn Knight" effect per turn, and only once that turn.
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     可在此卡從場上被送至墓地的狀況下發動。從牌組將１隻光屬性怪獸送至墓地。此外，在此卡從牌組被送至墓地的狀況下發動。選擇我方墓地的１隻光屬性怪獸置於牌組的最上方。「曙光的騎士」的效果１回合僅限使用１次。
   zh-CN: |-
-    场上的这张卡被送去墓地的场合，可以从卡组把1只光属性怪兽送去墓地。此外，这张卡从卡组送去墓地的场合，选择自己墓地1只光属性怪兽在卡组最上面放置。「曙光之骑士」的效果1回合只能使用1次。
+    此卡名的①②效果１回合１次，仅可使用其中１个。
+    ①：此卡从场上被送至墓地的情况下可以发动。从牌组将１只光属性怪兽送至墓地。
+    ②：此卡从牌组被送至墓地的情况下，以自己墓地的１只光属性怪兽为对象发动。将该光属性怪兽放在牌组最上面。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
