--- a/data/cards/15661378.yaml
+++ b/data/cards/15661378.yaml
@@ -45,10 +45,10 @@ text:
     ●可在將我方場上的上述卡除外的狀況下，從額外牌組特殊召喚（不需要「融合」）。
     ①：可在此卡僅以原本的種族為龍族的怪獸做為素材特殊召喚成功的狀況下發動。依我方牌組・對方牌組的最上方・對方額外牌組的順序，確認卡後除外１張卡。此卡名的此效果１回合僅限使用１次。
   zh-CN: |-
-    卡名不同的怪兽×3
-    这张卡用只以自己的手卡·场上的怪兽为素材的融合召唤以及用以下方法才能从额外卡组特殊召唤。
-    ●把自己场上的上记卡除外的场合可以从额外卡组特殊召唤（不需要「融合」）。
-    ①：只用原本种族是龙族的怪兽作为素材让这张卡特殊召唤成功的场合才能发动。以自己卡组·对方卡组最上面·对方的额外卡组的顺序来确认并各让1张除外。这个卡名的这个效果1回合只能使用1次。
+    卡名不同的怪兽×３
+    此卡从额外牌组仅可通过、仅以自己手牌・场上的怪兽作为素材的融合召唤，及以下方法特殊召唤。
+    ●将自己场上的上述卡除外的情况下，可从额外牌组特殊召唤。
+    ①：仅以原本种族为龙族的怪兽作为素材将此卡特殊召唤的情况下可以发动（此卡名的此效果１回合仅可使用１次）。对自己的牌组・对手的牌组最上面・对手的额外牌组，依序确认并从中各除外１张。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: WATER
