--- a/data/cards/58695102.yaml
+++ b/data/cards/58695102.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리 바이블
   ko_rr:
   zh-TW: 復活聖經
-  zh-CN: 再生圣经
+  zh-CN: 复活圣经
 text:
   en: |-
     If this card is in the GY and your opponent has 5 or more cards in their Extra Deck than you do: You can pay 2000 LP; Special Summon this card, but banish it when it leaves the field. You can only use this effect of "Re-Cover" once per turn.
@@ -33,8 +33,8 @@ text:
   zh-TW: |-
     「復活聖經」的效果１回合僅限使用１次。①：在此卡存在於墓地，我方額外牌組的張數比對方少５張以上的狀況下，可支付２０００LP發動。從墓地特殊召喚此卡。透過此效果特殊召喚的此卡，在從場上離開的狀況下將被除外。
   zh-CN: |-
-    「再生圣经」的效果1回合只能使用1次。
-    ①：这张卡在墓地存在，自己的额外卡组的数量比对方少5张以上的场合，支付2000基本分才能发动。这张卡从墓地特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
+    此卡名的效果１回合仅可使用１次。
+    ①：此卡存在于墓地，且自己的额外牌组的张数比对手少５张以上的情况下，支付２０００LP可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡从场上离开的情况下，将其除外。
 card_type: Monster
 monster_type_line: Psychic / Tuner / Effect
 attribute: EARTH
