--- a/data/cards/70493141.yaml
+++ b/data/cards/70493141.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     ①：可支付３０００LP從手牌特殊召喚此卡。②：在透過此卡的①方法特殊召喚的此卡被對方破壞的狀況下發動。我方回復５０００LP。
   zh-CN: |-
-    ①：支付3000LP可将此卡从手牌特殊召唤。②：用此卡的①方法特殊召唤的此卡因对手被破坏的情况下发动。自己恢复5000LP。
+    ①：此卡可支付３０００LP来从手牌特殊召唤。
+    ②：以此卡的①方法特殊召唤的此卡因对手被破坏的情况下发动。自己恢复５０００LP。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: LIGHT
