--- a/data/cards/71650854.yaml
+++ b/data/cards/71650854.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     可在我方的主要階段１・主要階段２開始時發動此卡。①：在雙方的主要階段１期間，場上的怪獸不會成為各自的對方的效果對象，不會因各自的對方的效果被破壞。②：只要此卡存在於場地區，我方就無法發動・覆蓋場地魔法卡。
   zh-CN: |-
-    自己的主要阶段1·主要阶段2的开始时才能把这张卡发动。①：双方的主要阶段1内，场上的怪兽不会成为各自的对方的效果的对象，不会被各自的对方的效果破坏。②：只要这张卡在场地区域存在，自己不能把场地魔法卡发动·盖放。
+    在自己的主要阶段１开始时・主要阶段２开始时可以发动此卡。
+    ①：在双方的主要阶段１期间，场上的怪兽各不可被其对手的效果作为对象，各不会因其对手的效果被破坏。
+    ②：只要此卡存在于场地区域，自己不可发动・放置场地魔法卡。
 card_type: Spell
 property: Field
 series:
