--- a/data/cards/76039636.yaml
+++ b/data/cards/76039636.yaml
@@ -12,7 +12,7 @@ name:
   ko: 데블도우저
   ko_rr:
   zh-TW: 魔鬼蜈蚣
-  zh-CN: 恶魔铲土虫
+  zh-CN: 魔鬼铲土虫
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by banishing 2 Insect monsters from your GY. If this card inflicts battle damage to your opponent: Send the top card of their Deck to the GY.
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡無法通常召喚。僅可在從我方墓地將２隻昆蟲族怪獸從遊戲除外的狀況下特殊召喚。此卡給予對方LP戰鬥傷害時，從對方牌組上方將１張卡送至墓地。
   zh-CN: |-
-    这张卡不能通常召唤。把自己墓地2只昆虫族怪兽从游戏中除外的场合才能特殊召唤。这张卡给与对方基本分战斗伤害时，从对方卡组上面把1张卡送去墓地。
+    此卡不可通常召唤。
+    仅可在从自己的墓地将２只昆虫族怪兽除外的情况下特殊召唤。
+    ①：此卡给予对手战斗伤害的情况下发动。从对手的牌组上面将１张卡送至墓地。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: EARTH
