--- a/data/cards/87979586.yaml
+++ b/data/cards/87979586.yaml
@@ -12,7 +12,7 @@ name:
   ko: 엔젤 트럼피터
   ko_rr:
   zh-TW: 天使號手
-  zh-CN: 曼陀罗天使号手
+  zh-CN: 天使曼陀号手
 text:
   en: |-
     This beautiful, fairy-like flower generates a delusional mist to keep intruders away from the deepest parts of the forest, where sacred beasts dwell.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     有如天使般美麗的花朵。不斷製造迷霧迷惑入侵者，不允許他們進入聖獸棲息的森林最深處。
   zh-CN: |-
-    如天使般的美丽之花。它不断地释放出一种雾来迷惑侵入者，不允许其进入圣兽们居住的森林最深处。
+    如天使般美丽的花朵。不断散发出迷惑人的雾气，阻挡入侵者闯进圣兽们所栖息的森林最深处。
 card_type: Monster
 monster_type_line: Plant / Tuner / Normal
 attribute: EARTH
