--- a/data/cards/93946239.yaml
+++ b/data/cards/93946239.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     我方手牌为3张或以上的场合可发动。从我方牌组中抽取1张卡牌。于此回合的结束阶段时舍弃我方的全部手牌。
   zh-CN: |-
-    自己手卡是3张以上的场合才能发动。从自己卡组抽1张卡，这个回合的结束阶段时自己手卡全部丢弃。
+    ①：自己的手牌为３张以上的情况下可以发动。自己抽１张。在此回合的结束阶段，将自己的手牌全部舍弃。
 card_type: Spell
 property: Normal
 series:
