--- a/data/cards/95888876.yaml
+++ b/data/cards/95888876.yaml
@@ -50,6 +50,8 @@ attribute: FIRE
 level: 6
 atk: 2400
 def: 1500
+series:
+- Chthonian
 images:
 - index: 1
   image: ChthonianEmperorDragon-TAEV-EN-UR-1E.jpg
