--- a/data/rush/18758.yaml
+++ b/data/rush/18758.yaml
@@ -44,7 +44,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, your opponent cannot activate Trap Cards when this card declares an attack, also if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects.
+    If you have no monsters in your Graveyard, your opponent cannot activate Trap Cards when this card declares an attack, then if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
