--- a/data/rush/18761.yaml
+++ b/data/rush/18761.yaml
@@ -44,7 +44,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects, also if this card is in Maximum Mode, your opponent cannot activate Trap Cards when it declares an attack.
+    If you have no monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects, then if this card is in Maximum Mode, your opponent cannot activate Trap Cards when it declares an attack.
   de:
   es:
   fr:
