--- a/data/rush/19987.yaml
+++ b/data/rush/19987.yaml
@@ -29,7 +29,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, also it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
+    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, then it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
   de:
   es:
   fr:
