--- a/rush.yaml
+++ b/rush.yaml
@@ -100190,7 +100190,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, your opponent cannot activate Trap Cards when this card declares an attack, also if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects.
+    If you have no monsters in your Graveyard, your opponent cannot activate Trap Cards when this card declares an attack, then if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -100266,7 +100266,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, your opponent cannot Set monsters from their hand, also if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, your opponent cannot Set Spell/Trap Cards from their hand.
+    If you have no monsters in your Graveyard, your opponent cannot Set monsters from their hand, then if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, your opponent cannot Set Spell/Trap Cards from their hand.
   de:
   es:
   fr:
@@ -100428,7 +100428,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects, also if this card is in Maximum Mode, your opponent cannot activate Trap Cards when it declares an attack.
+    If you have no monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects, then if this card is in Maximum Mode, your opponent cannot activate Trap Cards when it declares an attack.
   de:
   es:
   fr:
@@ -103558,7 +103558,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also during your opponent's turn, this Attack Position card cannot be destroyed by battle.
+    If a card is in your Spell & Trap Zone, this card gains 200 ATK, then during your opponent's turn, this Attack Position card cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -132818,7 +132818,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, also it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
+    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, then it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
   de:
   es:
   fr:
