--- a/data/cards/yugipedia1053426.yaml
+++ b/data/cards/yugipedia1053426.yaml
@@ -34,6 +34,7 @@ atk: 4500
 def: 2500
 materials: '"Fallen of Albaz" + 6 monsters in your Graveyard with different names'
 series:
+- Albaz Dragon
 - Dogmatika
 images:
 - index: 1
@@ -41,7 +42,7 @@ images:
 sets:
   ja:
   - set_number: CF01-JP000
-    set_name: 'Complete File: The White Story promotional card'
+    set_name: 'Complete File: Story of White'
     rarities:
     - Quarter Century Secret Rare
 limit_regulation:
