--- a/data/cards/10178757.yaml
+++ b/data/cards/10178757.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta viene aggiunta dal tuo Deck alla tua mano dall'effetto di un mostro "Genex", puoi Evocare Specialmente questa carta. Questa carta non può essere utilizzata come Mostro Materiale Synchro, eccetto che per la Synchro Evocazione di un mostro "Genex".
   pt: |-
-    Se este card for adicionado do seu Deck para a sua mão pelo efeito de um monstro "Genex", você pode Invocar este card por Invocação-Especial. Este card não pode ser usado como um Monstro-Matéria Sincro, exceto para a Invocação-Sincro de um monstro "Genex".
+    Não pode ser usado como Matéria Sincro, exceto para a Invocação-Sincro de um monstro "Genex". Se este card for adicionado do seu Deck à sua mão pelo efeito de um monstro "Genex": você pode Invocar este card por Invocação-Especial.
   ja: |-
     このカードをＳ素材とする場合、「ジェネクス」モンスターのＳ召喚にしか使用できない。①：このカードが「ジェネクス」モンスターの効果で自分のデッキから手札に加わった場合に発動できる。このカードを特殊召喚する。
   ko: |-
