--- a/data/cards/38354937.yaml
+++ b/data/cards/38354937.yaml
@@ -30,8 +30,8 @@ text:
     1 Tuner "Genex" + 1 o più mostri non-Tuner OSCURITÀ
     Quando questa carta viene Synchro Evocata, prendi il controllo del mostro scoperto controllato dal tuo avversario con il Livello più alto (in caso di parità, puoi scegliere tu).
   pt: |-
-    1 Regulador "Genex" + 1 ou mais monstros de TREVAS não-Reguladores
-    Quando este card for Invocado por Invocação-Sincro, tome o controle do monstro com a face para cima que seu oponente controla com o maior Nível. (Em caso de empate, você escolhe.)
+    1 Regulador "Genex" + 1+ monstros não-Reguladores de TREVAS
+    Se este card for Invocado por Invocação-Sincro: tome o controle do 1 monstro que seu oponente controla com o maior Nível (em caso de empate, você seleciona).
   ja: |-
     「ジェネクス」チューナー＋チューナー以外の闇属性モンスター１体以上
     ①：このカードがＳ召喚した場合に発動する。相手フィールドのレベルが一番高いモンスター１体のコントロールを得る。
