--- a/data/cards/71829750.yaml
+++ b/data/cards/71829750.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta scoperta viene rimessa nel tuo Deck dal Terreno, effettua l'Evocazione Speciale di 1 mostro di Livello 3 o inferiore dal tuo Deck. Dopo di che, mischia il tuo Deck.
   pt: |-
-    Se este card com a fase para cima for devolvido do Campo para o seu Deck, Invoque por Invocação-Especial 1 monstro de Nível 3 ou inferior do seu Deck.
+    Se este card com a face para cima for embaralhado do campo no seu Deck: Invoque por Invocação-Especial 1 monstro de Nível 3 ou menos do seu Deck.
   ja: |-
     ①：表側表示のこのカードがフィールドからデッキに戻った場合に発動する。デッキからレベル３以下のモンスター１体を特殊召喚する。
   ko: |-
