--- a/data/cards/89333528.yaml
+++ b/data/cards/89333528.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta sta per essere distrutta, puoi invece distruggere un mostro "Genex Controllore" che controlli.
   pt: |-
-    Se este card seria destruído, em vez disso, você pode destruir 1 monstro "Controlador Genex" que você controla.
+    Se este card no campo seria destruído em batalha ou por um efeito de card, em vez disso, você pode destruir 1 "Controlador Genex" que você controla.
   ja: |-
     ①：フィールドのこのカードが戦闘・効果で破壊される場合、代わりに自分フィールドの「ジェネクス・コントローラー」１体を破壊できる。
   ko: |-
