--- a/data/cards/17760003.yaml
+++ b/data/cards/17760003.yaml
@@ -33,11 +33,11 @@ text:
     ● ACQUA: Scegli 1 Carta Magia/Trappola sul Terreno e distruggila.
     ● OSCURITÀ: Scegli 1 mostro LUCE scoperto sul Terreno, distruggilo e pesca 1 carta.
   pt: |-
-    "Controlador Genex" + 1 ou mais monstros não-Reguladores
-    O efeito deste card depende dos Atributos dos seus Monstros-Matéria Sincro não-Reguladores. Uma vez por turno, você pode descartar 1 card para ativar um de seus efeitos:
-    ●VENTO: Envie 1 card aleatório da mão do oponente ao Cemitério.
-    ●ÁGUA: Selecione 1 Card de Magia/Armadilha no campo e destrua-o.
-    ●TREVAS: Selecione 1 monstro de LUZ com a face para cima no campo, destrua-o e compre 1 card.
+    "Controlador Genex" + 1+ monstros não-Reguladores
+    Uma vez por turno: você pode descartar 1 card e, depois, ative 1 desses efeitos, dependendo dos Atributos dos não-Reguladores usados para a Invocação-Sincro deste card;
+    ●VENTO: Envie 1 card aleatório da mão do seu oponente para o Cemitério.
+    ●ÁGUA: Escolha 1 Magia/Armadilha no campo; destrua-a.
+    ●TREVAS: Escolha 1 monstro de LUZ no campo; destrua o alvo e, se isso acontecer, compre 1 card.
   ja: |-
     「ジェネクス・コントローラー」＋チューナー以外のモンスター１体以上
     ①：１ターンに１度、手札を１枚捨て、このカードのＳ素材としたチューナー以外のモンスターの属性によって以下の効果から１つを選択して発動できる。●風：相手の手札をランダムに１枚墓地へ送る。●水：フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。●闇：フィールドの光属性モンスター１体を対象として発動できる。その光属性モンスターを破壊し、自分は１枚ドローする。
