--- a/data/cards/67483216.yaml
+++ b/data/cards/67483216.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Quando questa carta viene distrutta in battaglia e mandata al Cimitero, puoi Evocare Specialmente 1 mostro "Genex" con ATK di 1500 o inferiore dal tuo Deck, scoperto in Posizione di Attacco.
   pt: |-
-    Quando este card for destruído em batalha e enviado para o Cemitério, você pode Invocar por Invocação-Especial 1 monstro "Genex" com 1500 ou menos de ATK do seu Deck com a face para cima em Posição de Ataque.
+    Quando este card for destruído em batalha e enviado para o Cemitério: você pode Invocar por Invocação-Especial 1 monstro "Genex" com 1500 ou menos de ATK do seu Deck em Posição de Ataque.
   ja: |-
     ①：このカードが戦闘で破壊され墓地へ送られた時に発動できる。デッキから攻撃力１５００以下の「ジェネクス」モンスター１体を攻撃表示で特殊召喚する。
   ko: |-
