--- a/data/cards/yugipedia1053426.yaml
+++ b/data/cards/yugipedia1053426.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Alba System Dogmatika
+  en: Dogmatikalamity Alba System
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ series:
 - Dogmatika
 images:
 - index: 1
-  image: AlbaSystemDogmatika-CF01-JP-OP.png
+  image: DogmatikalamityAlbaSystem-CF01-JP-OP.png
 sets:
   ja:
   - set_number: CF01-JP000
