--- a/data/cards/24915933.yaml
+++ b/data/cards/24915933.yaml
@@ -51,6 +51,8 @@ level: 8
 atk: 2500
 def: 2500
 materials: '"Blazing Cartesia, the Virtuous" + 1 LIGHT or DARK monster'
+series:
+- Virtuous Vestals
 images:
 - index: 1
   image: GranguignoltheDuskDragon-PHHY-EN-UR-1E.png
