--- a/data/cards/48654323.yaml
+++ b/data/cards/48654323.yaml
@@ -43,6 +43,7 @@ def: 2500
 ritual_spell: Dogmatikamacabre
 series:
 - Dogmatika
+- Virtuous Vestals
 images:
 - index: 1
   image: WhiteRelicofDogmatika-BACH-EN-SR-1E.png
