--- a/data/cards/40352445.yaml
+++ b/data/cards/40352445.yaml
@@ -43,6 +43,7 @@ def: 2500
 ritual_spell: Dogmatikalamity
 series:
 - Dogmatika
+- Virtuous Vestals
 images:
 - index: 1
   image: WhiteKnightofDogmatika-MP22-EN-SR-1E.png
