--- a/data/cards/53971455.yaml
+++ b/data/cards/53971455.yaml
@@ -53,6 +53,7 @@ def: 2500
 materials: 1 Level 4 Tuner + 1 or more non-Tuner monsters
 series:
 - Despia
+- Virtuous Vestals
 images:
 - index: 1
   image: DespianLuluwalilith-CYAC-EN-ScR-1E.png
