--- a/data/cards/55273560.yaml
+++ b/data/cards/55273560.yaml
@@ -40,6 +40,8 @@ attribute: LIGHT
 level: 4
 atk: 1500
 def: 1500
+series:
+- Virtuous Vestals
 images:
 - index: 1
   image: IncredibleEcclesiatheVirtuous-MAMA-EN-UR-1E.png
