--- a/data/cards/60303688.yaml
+++ b/data/cards/60303688.yaml
@@ -42,6 +42,7 @@ atk: 1500
 def: 1500
 series:
 - Dogmatika
+- Virtuous Vestals
 images:
 - index: 1
   image: DogmatikaEcclesiatheVirtuous-RA01-EN-SR-1E.png
