--- a/data/cards/69680031.yaml
+++ b/data/cards/69680031.yaml
@@ -42,6 +42,7 @@ atk: 2500
 def: 2500
 series:
 - Dogmatika
+- Virtuous Vestals
 images:
 - index: 1
   image: DogmatikaFleurdelistheKnighted-SDAZ-EN-C-1E.png
