--- a/data/cards/72272462.yaml
+++ b/data/cards/72272462.yaml
@@ -53,6 +53,7 @@ def: 2500
 materials: 1 "Despia" monster + 1 LIGHT or DARK monster
 series:
 - Despia
+- Virtuous Vestals
 images:
 - index: 1
   image: DespianQuaeritis-MP22-EN-PScR-1E.png
