--- a/data/cards/95515789.yaml
+++ b/data/cards/95515789.yaml
@@ -40,6 +40,8 @@ attribute: LIGHT
 level: 4
 atk: 1500
 def: 1500
+series:
+- Virtuous Vestals
 images:
 - index: 1
   image: BlazingCartesiatheVirtuous-DABL-JP-SR.png
