--- a/data/rush/16345.yaml
+++ b/data/rush/16345.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Psychic Type monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, it gains 1500 ATK until the end of this turn.
+    Special Summon 1 Level 7 Psychic Type monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, the monster Special Summoned by this effect gains 1500 ATK until the end of this turn.
   de:
   es:
   fr:
