--- a/data/rush/18588.yaml
+++ b/data/rush/18588.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, it loses 2000 DEF until the end of this turn.
+    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, that monster loses 2000 DEF until the end of this turn.
   de:
   es:
   fr:
