--- a/rush.yaml
+++ b/rush.yaml
@@ -31209,7 +31209,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Psychic Type monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, it gains 1500 ATK until the end of this turn.
+    Special Summon 1 Level 7 Psychic Type monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, the monster Special Summoned by this effect gains 1500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -90837,7 +90837,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. It gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
+    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
   de:
   es:
   fr:
@@ -92122,7 +92122,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, it loses 2000 DEF until the end of this turn.
+    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, that monster loses 2000 DEF until the end of this turn.
   de:
   es:
   fr:
@@ -101985,7 +101985,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if it is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
+    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
   de:
   es:
   fr:
@@ -119442,7 +119442,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 monster from your Graveyard face-up to your field. Then, if you have a High Dragon Type monster in your Graveyard, it gains 1000 ATK until the end of this turn.
+    Special Summon 1 monster from your Graveyard face-up to your field. Then, if you have a High Dragon Type monster in your Graveyard, the monster Special Summoned by this effect gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
