--- a/rush.yaml
+++ b/rush.yaml
@@ -139182,7 +139182,7 @@ name:
   it:
   pt:
   ja: オーバーラッシュ・ストーム
-  ja_romaji: Ōbā Rasshu Sutōmu
+  ja_romaji: Ōbārasshu Sutōmu
   ko:
   ko_rr:
   zh-TW:
@@ -141034,3 +141034,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1053237
+---
+konami_id:
+name:
+  en: Blue Tooth Reconnect
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ブルー・トゥース・リコネクト
+  ja_romaji: Burū Tūsu Rikonekuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2 LIGHT Attribute Dragon Type monsters from your Graveyard into the Deck. Then, you can Special Summon 1 "Blue Tooth Burst Dragon" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- High Tech Dragon
+images:
+- index: 1
+  image: BlueToothReconnect-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP054
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1053557
